# legalmind-rl

./: README.md  __init__.py  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  reward.py  tasks.py
legalmind_rl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: Dockerfile  __init__.py  app.py  legal_environment.py  requirements.txt
