[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legalmind-rl"
version = "1.0.0"
description = "Courtroom simulation RL environment — OpenEnv compatible"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "LegalMind-RL"}]
keywords = ["reinforcement-learning", "legal-reasoning", "openenv", "simulation"]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "pydantic>=2.8.2",
  "httpx>=0.27.2",
  "openai>=1.45.0",
  "websockets>=12.0",
  "PyYAML>=6.0.2",
  "openenv-core>=0.2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
legalmind-server = "server.app:main"